implemented first aos effect

--- a/about.html
+++ b/about.html
@@ -3,27 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Cyber Security Solutions</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Cyber Security Solutions</title>
+    <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
     <header>
         <nav>
+            <div class="logo">CyberSecurity</div>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="dropdown">
+                    <a href="index.html">Platform</a>
+                    <div class="dropdown-content">
+                        <a href="index.html#overview">Overview</a>
+                        <a href="index.html#features">Features</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="solutions.html">Solutions</a>
+                    <div class="dropdown-content">
+                        <a href="solutions.html#threat">Threat Detection</a>
+                        <a href="solutions.html#prevention">Prevention</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="partners.html">Partners</a>
+                    <div class="dropdown-content">
+                        <a href="partners.html#technology">Technology Partners</a>
+                        <a href="partners.html#resellers">Resellers</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="resources.html">Resources</a>
+                    <div class="dropdown-content">
+                        <a href="resources.html#blog">Blog</a>
+                        <a href="resources.html#whitepapers">Whitepapers</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="company.html">Company</a>
+                    <div class="dropdown-content">
+                        <a href="company.html#about">About Us</a>
+                        <a href="company.html#leadership">Leadership</a>
+                        <a href="company.html#careers">Careers</a>
+                        <a href="company.html#contact">Contact</a>
+                    </div>
+                </li>
             </ul>
+            <div class="header-buttons">
+                <a href="login.html" class="btn">Login</a>
+                <a href="request-demo.html" class="btn btn-primary">Request a Demo</a>
+            </div>
         </nav>
     </header>
     
     <main>
-        <section id="about">
-            <h2>About Us</h2>
-            <p>Cyber Security Solutions is dedicated to providing top-notch security services to protect your business from cyber threats.</p>
-            <p>Our team of experts has years of experience in the field of cyber security and is committed to ensuring the safety and security of your data.</p>
-            <p>We offer a wide range of services, including penetration testing, network security, and incident response, tailored to meet the unique needs of our clients.</p>
+        <section id="home">
+            <div class="home-content">
+                <h1>Cyber Security Solutions</h1>
+                <p>Get more ROI from your cybersecurity efforts by harnessing predictive analytics and insights within data-driven workflows.</p>
+                <a href="request-demo.html" class="btn btn-primary">Request a Demo</a>
+            </div>
+            <div class="home-image">
+                <img src="cyber-security-team.jpg" alt="Cyber Security Team">
+            </div>
         </section>
     </main>
     
