--- a/index.html
+++ b/index.html
@@ -5,84 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyber Security Solutions</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="features.css">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
     <header>
         <nav>
+            <div class="logo">CyberSecurity</div>
             <ul>
                 <li class="dropdown">
-                    <a href="index.html">Home</a>
+                    <a href="index.html">Platform</a>
                     <div class="dropdown-content">
-                        <a href="index.html#home">Overview</a>
+                        <a href="index.html#overview">Overview</a>
                         <a href="index.html#features">Features</a>
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a href="about.html">About</a>
+                    <a href="solutions.html">Solutions</a>
                     <div class="dropdown-content">
-                        <a href="about.html#team">Our Team</a>
-                        <a href="about.html#mission">Our Mission</a>
+                        <a href="solutions.html#threat">Threat Detection</a>
+                        <a href="solutions.html#prevention">Prevention</a>
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a href="services.html">Services</a>
-                    <div class="dropdown-content services-dropdown">
-                        <div class="column">
-                            <h3>Prepare</h3>
-                            <a href="#">SEC Readiness Services</a>
-                            <a href="#">Tabletop Exercise</a>
-                            <a href="#">Red Team/Blue Team Exercise</a>
-                            <a href="#">Adversary Emulation Exercise</a>
-                            <a href="#">Penetration Testing</a>
-                        </div>
-                        <div class="column">
-                            <h3>Respond</h3>
-                            <a href="#">Incident Response</a>
-                            <a href="#">Compromise Assessment</a>
-                            <a href="#">Endpoint Recovery</a>
-                            <a href="#">Network Detection</a>
-                        </div>
-                        <div class="column">
-                            <h3>Fortify</h3>
-                            <a href="#">Maturity Assessment</a>
-                            <a href="#">Technical Risk Assessment</a>
-                            <a href="#">SOC Assessment</a>
-                            <a href="#">Cloud Security Assessment</a>
-                            <a href="#">Identity Security Assessment</a>
-                        </div>
-                        <div class="column">
-                            <h3>Managed Services</h3>
-                            <a href="#">Managed Detection & Response</a>
-                            <a href="#">Cloud Detection and Response</a>
-                        </div>
-                        <div class="column">
-                            <h3>Additional Services</h3>
-                            <a href="#">Cloud Security Services</a>
-                            <a href="#">Identity Protection Services</a>
-                            <a href="#">Falcon LogScale Services</a>
-                            <a href="#">Partner Services</a>
-                        </div>
+                    <a href="partners.html">Partners</a>
+                    <div class="dropdown-content">
+                        <a href="partners.html#technology">Technology Partners</a>
+                        <a href="partners.html#resellers">Resellers</a>
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a href="contact.html">Contact</a>
+                    <a href="resources.html">Resources</a>
                     <div class="dropdown-content">
-                        <a href="contact.html#form">Contact Form</a>
-                        <a href="contact.html#location">Location</a>
+                        <a href="resources.html#blog">Blog</a>
+                        <a href="resources.html#whitepapers">Whitepapers</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="company.html">Company</a>
+                    <div class="dropdown-content">
+                        <a href="company.html#about">About Us</a>
+                        <a href="company.html#leadership">Leadership</a>
+                        <a href="company.html#careers">Careers</a>
+                        <a href="company.html#contact">Contact</a>
                     </div>
                 </li>
             </ul>
+            <div class="header-buttons">
+                <a href="login.html" class="btn">Login</a>
+                <a href="request-demo.html" class="btn btn-primary">Request a Demo</a>
+            </div>
         </nav>
     </header>
     
     <main>
         <section id="home">
-            <h1>Welcome to Cyber Security Solutions</h1>
-            <p>Protecting your business from cyber threats with cutting-edge technology and expertise.</p>
-            <p>Our mission is to safeguard your digital assets and ensure your business remains secure in an ever-evolving cyber landscape.</p>
+            <div class="hero-image">
+                </div>
+            <div class="home-content">
+                <h1>Shield Your Business from Cyber Threats</h1>
+                <p>We provide comprehensive cyber security solutions tailored to your business needs.</p>
+                <a href="#" class="cta-button">Contact Us</a>
+            </div>
+        </section>
+        
+
+        <section class="features">
+            <div class="feature">
+                <h3>featuer 1</h3>
+            </div>
+            <div class="feature">                <h3>featuer 2</h3>
+            </div>
+            <div class="feature">                <h3>featuer 3</h3>
+            </div>
         </section>
 
-        <section id="features">
+        <section class="features">
             <h2>Why Choose Us?</h2>
             <div class="feature">
                 <h3>Expert Team</h3>
